<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".SearchActivity">

    <org.osmdroid.views.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <View
        android:id="@+id/squareView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/square_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mapView" />
    <TextView
        android:id="@+id/location_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/squareView"
        app:layout_constraintEnd_toEndOf="@id/squareView"
        app:layout_constraintTop_toTopOf="@id/squareView"
        app:layout_constraintBottom_toBottomOf="@id/squareView" />

////////////
    <View
        android:id="@+id/squareView2"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/square_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/squareView" />

    <TextView
        android:id="@+id/stefatext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/your_timezone_label"

        android:textSize="16sp"

        app:layout_constraintStart_toStartOf="@id/squareView2"
        app:layout_constraintEnd_toEndOf="@id/squareView2"
        app:layout_constraintTop_toTopOf="@id/squareView2" />


    <TextView
        android:id="@+id/utc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="32dp"
        android:text="@string/utc_label"

        app:layout_constraintStart_toStartOf="@id/squareView2"
        app:layout_constraintTop_toBottomOf="@id/timezone_label" />

    <!-- Godzina i wartość godziny obok siebie -->

    <!-- Przycisk wyszukiwania -->

    <TextView
        android:id="@+id/timezone_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"

        app:layout_constraintStart_toEndOf="@id/timezone_label"
        app:layout_constraintTop_toBottomOf="@id/stefatext" />

    <TextView
        android:id="@+id/utc_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="40dp"
        android:textAlignment="center"

        app:layout_constraintStart_toEndOf="@id/utc_label"
        app:layout_constraintTop_toTopOf="@id/timezone_display" />

    <TextView
        android:id="@+id/time_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="40dp"
        android:textAlignment="center"

        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/time_label"
        app:layout_constraintTop_toTopOf="@id/utc_label" />

    <TextView
        android:id="@+id/time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_label"

        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="@id/squareView2"
        app:layout_constraintTop_toBottomOf="@id/utc_label" />

    <TextView
        android:id="@+id/timezone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="32dp"
        android:text="@string/timezone_label"

        app:layout_constraintStart_toStartOf="@id/squareView2"
        app:layout_constraintTop_toBottomOf="@id/stefatext" />
//////////////////////////

    <View
        android:id="@+id/squareView3"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/square_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/squareView4"
        app:layout_constraintTop_toBottomOf="@id/squareView2"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintHorizontal_chainStyle="spread" />

    <View
        android:id="@+id/squareView4"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/square_background"
        app:layout_constraintStart_toEndOf="@id/squareView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/squareView2"
        app:layout_constraintHorizontal_weight="1" />

    <TextView
        android:id="@+id/address_prompt_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/address_prompt_label"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/squareView3"
        app:layout_constraintEnd_toEndOf="@id/squareView3"
        app:layout_constraintTop_toTopOf="@id/squareView3" />

    <EditText
        android:id="@+id/address_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/address_hint"
        app:layout_constraintStart_toStartOf="@id/squareView3"
        app:layout_constraintEnd_toEndOf="@id/squareView3"
        app:layout_constraintTop_toBottomOf="@id/address_prompt_label" />



    <TextView
        android:id="@+id/coordinates_prompt_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/coordinates_prompt_label"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/squareView4"
        app:layout_constraintEnd_toEndOf="@id/squareView4"
        app:layout_constraintTop_toTopOf="@id/squareView4" />

    <EditText
        android:id="@+id/latitude_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/latitude_hint"
        app:layout_constraintStart_toStartOf="@id/squareView4"
        app:layout_constraintEnd_toEndOf="@id/squareView4"
        app:layout_constraintTop_toBottomOf="@id/coordinates_prompt_label" />

    <EditText
        android:id="@+id/longitude_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/longitude_hint"
        app:layout_constraintStart_toStartOf="@id/squareView4"
        app:layout_constraintEnd_toEndOf="@id/squareView4"
        app:layout_constraintTop_toBottomOf="@id/latitude_input" />

    <Button
        android:id="@+id/search_coordinates_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/search_button"
        android:background="@drawable/square_background"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_address_button"
        app:layout_constraintTop_toBottomOf="@id/squareView4" />
    <Button
        android:id="@+id/search_address_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/search_button"
        android:background="@drawable/square_background"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@id/search_coordinates_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/squareView3" />

    <Button
        android:id="@+id/button_go_map"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/button_map_activity"
        android:background="@drawable/square_background"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_coordinates_button" />



</androidx.constraintlayout.widget.ConstraintLayout>